add a question about how to kill pcba_test by 「Ctrl+C」

--- a/2021/20210307.md
+++ b/2021/20210307.md
@@ -1,10 +1,14 @@
 # 问题集（2021年3月1日～2021年3月7日）
 
+## 2021-03-04
+
+### Q4: pcba_test如何确保`Ctrl+C`可以终止运行？
+
 ## 2021-03-03
 
-### Q2: js如何使用其他包的函数？
-
 ### Q3: git内部是怎样实现的？
+
+### Q2: js如何使用其他包的函数？
 
 ## 2021-03-02
 
@@ -35,7 +39,10 @@
   - 开发electron程序时，需要在入口脚本中创建一个BrowserWindow对象win，再通过调用`win.loadFile`加载`index.html`
   - 运行electron程序前，需要在`package.json`配置好入口脚本路径（配置main参数的值），以及启动命令（配置scripts参数的值）。
 
+6. 使用google搜索，发现`yarn electron:serve`是一个开源项目`vue-cli-plugin-electron-builder`的用法。
+
 ### 参考资料
 
 1. [creating a package.json file](https://docs.npmjs.com/creating-a-package-json-file)
 2. [Yarn: A new package manager for JavaScript](https://engineering.fb.com/2016/10/11/web/yarn-a-new-package-manager-for-javascript/)
+3. [Vue CLI Plugin Electron Builder](https://nklayman.github.io/vue-cli-plugin-electron-builder/guide/guide.html)
