solve question 8: how to construct PAO system

--- a/2021/20210314.md
+++ b/2021/20210314.md
@@ -7,3 +7,25 @@
 ### Q8 如何构造双字母表PAO系统？
 
 > 备注：从人物、动物、植物、动作等思考。
+
+- 生物
+  - 人物
+    - 亲人
+    - 老师
+    - 同学
+    - 同事
+    - 朋友
+  - 动物
+    - 家畜
+    - 野生动物
+  - 植物
+    - 蔬菜
+    - 水果
+    - 花
+    - 树
+- 非生物
+  - 固体
+    - 家具
+    - 建筑
+  - 液体
+  - 气体
