add 2 questions about JavaScript

--- a/2021/20210314.md
+++ b/2021/20210314.md
@@ -1,5 +1,11 @@
 # 问题集（2021年3月8日～2021年3月14日）
 
+## 2021年3月11日
+
+### Q11 JavaScript的Promise是什么？
+
+### Q10 JavaScript的async/await机制是怎样的？
+
 ## 2021年3月10日
 
 ### Q9 如何管理vimrc/bashrc等配置文件？
@@ -15,6 +21,8 @@
     - 同学
     - 同事
     - 朋友
+    - 明星
+    - 名人
   - 动物
     - 家畜
     - 野生动物
