solve the question 12~14: how to get the latest news about science and technology.

--- a/2021/20210321.md
+++ b/2021/20210321.md
@@ -1,5 +1,25 @@
 # 问题集（2021年3月15日～2021年3月21日）
 
+## 2021年3月16日
+
+### Q14 如何获取电子通信/物理/心理学/生物/化学等领域的行业发展/技术前沿等信息？
+
+#### 电子通信
+
+- C114通信网
+- 通信人家园
+- 电子发烧友
+- 华为新闻
+- 华为心声社区
+- 极客公园
+
+#### 科学技术
+
+- Nature
+- Science
+- Science American
+- 科创论坛
+
 ## 2021年3月15日
 
 ### Q13 如何获取自动驾驶的行业发展/技术前沿等信息？
@@ -36,4 +56,13 @@
 - 高校
 - 企业
   - 微软
+  - Google
+  - Facebook
+  - 百度
+  - NVIDIA
 - 标准组织
+- 博客、网站
+  - 机器之心
+  - Synced
+  - OpenAI
+  - AI Weekly
