finish question 16: cmake grammer

--- a/2021/20210321.md
+++ b/2021/20210321.md
@@ -4,6 +4,8 @@
 
 ### Q16 cmake的基本语法是怎样的？
 
+已看完一遍cmake tutorial，跑完前9个sample，并输出学习笔记《use_cmake.md》。
+
 ### Q15 Python里的yield关键字是什么意思？
 
 ## 2021年3月16日
