update question 17: understand vehicle_system/yolo instead of flexidag_vehicle

--- a/2021/20210321.md
+++ b/2021/20210321.md
@@ -4,7 +4,7 @@
 
 ### Q18 如何理解深度学习组提供的mdc_detect_demo源码？
 
-### Q17 如何理解flexidag_vehicle的源码？
+### Q17 如何理解vehicle_system/yolo的源码？
 
 ## 2021年3月17日
 
