add people categories.

--- a/2021/20210314.md
+++ b/2021/20210314.md
@@ -17,12 +17,22 @@
 - 生物
   - 人物
     - 亲人
+    - 亲戚
+    - 同乡
     - 老师
     - 同学
     - 同事
     - 朋友
-    - 明星
     - 名人
+      - 歌手
+      - 演员
+      - 运动员
+      - 政治家
+      - 企业家
+      - 作家
+      - 思想家
+      - 科学家
+      - 工程师
   - 动物
     - 家畜
     - 野生动物
