add two questions about C++ Styles and pitfalls.

--- a/2021/20210328.md
+++ b/2021/20210328.md
@@ -1,5 +1,11 @@
 # 问题集（2021年3月22日～2021年3月28日）
 
+## 2021年3月24日
+
+### Q24 C++编程中有哪些易踩的坑及如何避免？
+
+### Q23 Google C++编程规范是怎样的？
+
 ## 2021年3月22日
 
 ### Q22 什么是像素？什么是分辨率？什么是屏幕分辨率和图片分辨率？
