add a question about going to definition in vim

--- a/2021/20210328.md
+++ b/2021/20210328.md
@@ -2,9 +2,9 @@
 
 ## 2021年3月27日
 
-### Q29 如何管理vimrc配置文件？
+### Q30 如何配置vim以支持函数跳转？
 
-## 2021年3月27日
+### Q29 如何管理vimrc配置文件？
 
 ### Q28 如何简洁地编写Makefile以编译构建大型项目？
 
