add 2 questions about object functions

--- a/2021/20210404.md
+++ b/2021/20210404.md
@@ -2,6 +2,10 @@
 
 ## 2021年4月3日
 
+### Q35 C++/Python/JavaScript/Rust/Go 分别是如何存储类对象的？（特别是类函数）
+
+### Q34 C++虚函数表原理是什么？
+
 ### Q33 实现一个知识问答工具
 
 ### Q32 实现一个历史年表测试工具
