add 3 questions about shell/sed/awk

--- a/2021/20210404.md
+++ b/2021/20210404.md
@@ -2,6 +2,12 @@
 
 ## 2021年4月3日
 
+### Q38 sed的基本语法是怎样的？
+
+### Q37 awk的基本语法是怎样的？
+
+### Q36 shell的基本语法是怎样的？
+
 ### Q35 C++/Python/JavaScript/Rust/Go 分别是如何存储类对象的？（特别是类函数）
 
 ### Q34 C++虚函数表原理是什么？
