add a reference about multiple inheritance.

--- a/2021/20210411.md
+++ b/2021/20210411.md
@@ -5,3 +5,7 @@
 ### Q42 C++ 构造函数的定义允不允许进行可能失败的操作？
 
 ### Q41 C++ 使用多继承有什么缺点吗？
+
+1. 参考[Inheritance — Multiple and Virtual Inheritance][inheritance]
+
+  [inheritance]: https://isocpp.org/wiki/faq/multiple-inheritance
