add Q45: how to improve programming efficiency

--- a/2021/20210411.md
+++ b/2021/20210411.md
@@ -2,6 +2,12 @@
 
 ## 2021-04-10
 
+### Q45 如何提高开发效率？
+
+- vim 配置放在github上。（伍注：所有常用的配置文件都放在github上）
+- 总结有自己的 codesnip。
+- 注意代码复用，时刻注意重构和抽取公共代码。
+
 ### Q44 如何使用git rebase解决冲突？
 
 ### Q43 如何安装及使用fish？
