solve Q44 (git rebase) and add Q56 (libflow)

--- a/2021/20210411.md
+++ b/2021/20210411.md
@@ -18,6 +18,10 @@
 
 ### Q44 如何使用git rebase解决冲突？
 
+- 执行`git rebase <some-branch>` 或者 `git pull --rebase`
+- 打开提示冲突的文件，解决冲突，然后执行`git add`，则该文件的冲突已经解决
+- 执行`git rebase --continue`，继续解决其他冲突
+
 ### Q43 如何安装及使用fish？
 
 ## 2021-04-09
