add Q59 (How does Liu Weipeng learn C++) and Q60 (logic)

--- a/2021/20210502.md
+++ b/2021/20210502.md
@@ -1,5 +1,11 @@
 # 问题集（2021年4月26日～2021年5月2日）
 
+## 2021-05-02
+
+### Q60 逻辑学的知识框架是怎样的？
+
+### Q59 刘未鹏是如何学习C++的？
+
 ## 2021-04-29
 
 ### Q58 gtest 的基本用法是怎样的？
