solve Q59: how experts learn C++

--- a/2021/20210502.md
+++ b/2021/20210502.md
@@ -4,7 +4,9 @@
 
 ### Q60 逻辑学的知识框架是怎样的？
 
-### Q59 刘未鹏是如何学习C++的？
+### Q59 大神们是如何学习C++的？
+
+[how to_master_cpp](https://github.com/whl1729/note/tree/master/method/programming/how_to_master_cpp.md)
 
 ## 2021-04-29
 
