solve Q51: git submodule

--- a/2021/20210425.md
+++ b/2021/20210425.md
@@ -14,4 +14,9 @@
 
 ### Q51 git submodule 的基本用法是怎样的？
 
+详见Git官方文档《Pro Git》第7.11节「Git Tools Submodules」。主要是2条命令：
+
+- `git submodule add`
+- `git submodule update --init --recursive`
+
 ### Q50 shellcheck 的基本用法是怎样的？
