solve Q52: git lfs

--- a/2021/20210425.md
+++ b/2021/20210425.md
@@ -12,11 +12,21 @@
 
 ### Q52 git lfs 的基本用法是怎样的？
 
+详见[git 使用笔记][use_git]。主要是几条命令。
+
+- `git lfs install`
+- `git lfs track "*.avi"`
+- `git add .gitattributes`
+
+  [use_git]: https://github.com/whl1729/note/blob/master/tool/git/use_git.md
+
 ### Q51 git submodule 的基本用法是怎样的？
 
-详见Git官方文档《Pro Git》第7.11节「Git Tools Submodules」。主要是2条命令：
+详见Git官方文档《Pro Git》第7.11节[「Git Tools Submodules」][submodules]。主要是2条命令：
 
 - `git submodule add`
 - `git submodule update --init --recursive`
+
+  [submodules]: https://git-scm.com/book/en/v2/Git-Tools-Submodules
 
 ### Q50 shellcheck 的基本用法是怎样的？
